refactor: pom update, final bughunt, Makefile add